# Nand2tetris

./: .gitignore  Ideas.txt  Jack.benf  README.md
Custom chips/: ALU.hdl  ARegiste.hdl  Add16.hdl  And.hdl  And16.hdl  Bit.hdl  CPU.hdl  Computer.hdl  DFF.hdl  DMux.hdl  DMux16.hdl  DMux4Way.hdl  DMux4Way16.hdl  DMux8Way.hdl  DMux8Way16.hdl  DRegiste.hdl  FullAdder.hdl  HalfAdder.hdl  Inc16.hdl  Memory.hdl  Mux.hdl  Mux16.hdl  Mux4Way16.hdl  Mux8Way16.hdl  Nand.hdl  Not.hdl  Not16.hdl  Or.hdl  Or16.hdl  Or16Way.hdl  Or8Way.hdl  PC.hdl  RAM16K.hdl  RAM4K.hdl  RAM512.hdl  RAM64.hdl  RAM8.hdl  RAM8K.hdl  ROM32K.hdl  Register.hdl  (+1 more)
SoftwareSuite/: ChangeLog.txt  Readme.txt  pom.xml
SoftwareSuite/Assembly/: pom.xml
SoftwareSuite/Assembly/src/assembly/: descriptor.xml
SoftwareSuite/Assembly/src/main/resources/: Readme.txt
SoftwareSuite/BuiltInChips/: pom.xml
SoftwareSuite/BuiltInVMCode/: pom.xml
SoftwareSuite/Compilers/: pom.xml
SoftwareSuite/Hack/: pom.xml
SoftwareSuite/HackGUI/: pom.xml
SoftwareSuite/MainClasses/: pom.xml
SoftwareSuite/Simulators/: pom.xml
SoftwareSuite/SimulatorsGUI/: pom.xml
projects/01/src/And/: And.hdl
projects/01/src/DMux/: DMux.hdl
projects/01/src/DMux4Way/: DMux4Way.hdl
projects/01/src/DMux8Way/: DMux8Way.hdl
projects/01/src/Mux/: Mux.hdl
projects/01/src/Mux4Way16/: Mux4Way16.hdl
projects/01/src/Mux8Way16/: Mux8Way16.hdl
projects/01/src/Not16/: Not16.hdl
projects/01/src/Or/: Or.hdl
projects/01/src/Or8Way/: Or8Way.hdl
projects/01/src/Xor/: Xor.hdl
projects/01/test/: test.py  test_01.py
projects/02/src/ALU/: ALU.hdl
projects/02/src/Add16/: Add16.hdl
projects/02/src/FullAdder/: FullAdder.hdl
projects/02/src/HalfAdder/: HalfAdder.hdl
projects/02/src/Inc16/: Inc16.hdl
projects/02/test/: test.py  test_02.py
projects/03/src/Bit/: Bit.hdl
projects/03/src/PC/: PC.hdl
projects/03/src/RAM16K/: RAM16K.hdl
projects/03/src/RAM4K/: RAM4K.hdl
projects/03/src/RAM512/: RAM512.hdl
projects/03/src/RAM64/: RAM64.hdl
projects/03/src/RAM8/: RAM8.hdl
projects/03/src/Register/: Register.hdl
projects/03/test/: test.py  test_03.py
projects/04/src/Fill/: Fill.asm
projects/04/src/Mult/: Mult.asm
projects/04/test/: test.py  test_04.py
projects/05/src/: CPU.hdl  Computer.hdl  Memory.hdl
projects/05/test/: test.py  test_05.py
projects/06/: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  settings.gradle.kts
projects/06/app/: build.gradle.kts
projects/06/app/src/main/java/io/github/ironking24/nand2tetris/HackAssembler/: CodeModule.java  HackAssembler.java  Parser.java  SymbolTable.java
projects/06/app/src/test/java/io/github/ironking24/nand2tetris/HackAssembler/: CodeModuleTest.java  HackAssemblerTest.java  ParserTest.java  SymbolTableTest.java
projects/06/include/: CMakeLists.txt
projects/06/src/: CMakeLists.txt  CodeModule.cpp  CodeModule.h  CodeModule.hpp  HackAssembler.cpp  HackAssembler.hpp  Main.cpp  Main.h  Parser.cpp  Parser.h  Parser.hpp  SymbolTable.cpp  SymbolTable.h  SymbolTable.hpp
projects/06/test/: CMakeLists.txt
projects/06/test/res/parser/: test.asm
projects/06/test/src/: CodeModuleTest.cpp  ParserTest.cpp  SymbolTableTest.cpp  args.py  conf.py  test_HackAssembler.py
projects/07/: .clang-format  .clang-tidy  CMakeLists.txt  settings.gradle.kts
projects/07/app/: build.gradle.kts
projects/07/app/src/main/java/io/github/ironking24/nand2tetris/VMTranslator/: CodeWriter.java  Parser.java  VMTranslator.java
projects/07/app/src/test/java/io/github/ironking24/nand2tetris/VMTranslator/: VMTranslatorTest.java
projects/07/src/: CMakeLists.txt  CodeWriter.cpp  CodeWriter.h  Main.cpp  Main.h  Parser.cpp  Parser.h
projects/07/test/: CMakeLists.txt
projects/07/test/MemoryAccess/BasicTest/: BasicTest.asm  BasicTest.out
projects/07/test/res/Parser/: test.vm
projects/07/test/src/: ParserTest.cpp  conf.py  test_VMTranslator.py
projects/08/: .clang-format  .clang-tidy  CMakeLists.txt  CMakePresets.json
projects/08/app/: build.gradle.kts
projects/08/app/src/main/java/io/github/ironking24/nand2tetris/VMTranslator/: CodeWriter.java  Parser.java  VMTranslator.java
projects/08/app/src/test/java/io/github/ironking24/nand2tetris/VMTranslator/: ParserTest.java  VMTranslatorTest.java
projects/08/src/: CMakeLists.txt  CodeWriter.cpp  CodeWriter.h  Main.cpp  Main.h  Parser.cpp  Parser.h
projects/08/test/: CMakeLists.txt
projects/08/test/FunctionCalls/FibonacciElement/: FibonacciElement.asm
projects/08/test/FunctionCalls/NestedCall/: NestedCall.asm
projects/08/test/FunctionCalls/SimpleFunction/: SimpleFunction.asm
projects/08/test/FunctionCalls/StaticsTest/: StaticsTest.asm
projects/08/test/ProgramFlow/FibonacciSeries/: FibonacciSeries.asm
projects/08/test/src/: ParserTest.cpp  conf.py  test_VMTranslator.py
projects/09/Project/src/: Bubble_Sort.jack  Main.jack
projects/10/: CMakeLists.txt  build.gradle.kts  settings.gradle.kts
projects/10/src/: CMakeLists.txt  CompilationEngine.cpp  CompilationEngine.h  JackTokenizer.cpp  JackTokenizer.h  Main.cpp  Main.h
projects/10/src/main/java/: Analyzer.java  CompilationEngine.java  Tokenizer.java
projects/10/src/test/java/: FilesFinder.java  TokenizerTest.java
projects/10/test/: CMakeLists.txt
projects/10/test/resources/ArrayTest/: MainTComp.xml
projects/10/test/src/: JackTokenizerTest.cpp  ParserTest.cpp  test_JackTokenizer.py
projects/11/: .editorconfig  CMakePresets.json
projects/13/: Other Ideas.txt
